# underdog

./: .gitignore  404.html  README.md  build.gradle  gradle.properties  index.html  settings.gradle  sitemap.xml
docs/guide/: guide.gradle  mkdocs.yml  pyproject.toml
docs/guide/docs/: index.md
docs/guide/docs/blog/posts/2023/: underdog_preview.md
docs/guide/docs/blog/posts/2024/: underdog_primer.md
docs/guide/docs/blog/posts/2025/: chrismas_in_numbers.md
docs/guide/docs/dataframe/: index.md  tutorial.md
docs/guide/docs/dataframe/dataframe/: creation.md  filtering.md  import_export.md  import_export_csv.md  index.md  mapping.md  sorting.md
docs/guide/docs/dataframe/series/: creation.md  index.md  intro.md  statistics.md
docs/guide/docs/graphs/: distances.md  index.md  introspection.md  operators.md  traversal.md  tutorial.md
docs/guide/docs/ml/: extensions.md  index.md  tutorial.md
docs/guide/docs/plots/: bar.md  extensions.md  graphs.md  index.md  introduction.md  line.md  pie.md  radar.md  scatter.md
docs/guide/docs/ta/: index.md  tutorial.md
docs/guide/site/: 404.html  index.html  sitemap.xml
docs/guide/site/search/: search_index.json
docs/guide/src/docs/asciidoc/: index.adoc
docs/guide/src/docs/asciidoc/dataframe/: index.adoc  tutorial.adoc
docs/guide/src/docs/asciidoc/graphs/: distances.adoc  index.adoc  introspection.adoc  operators.adoc  scoring.adoc  traversal.adoc  tutorial.adoc
docs/guide/src/docs/asciidoc/ml/: extensions.adoc  index.adoc  tutorial.adoc
docs/guide/src/docs/asciidoc/plots/: bar.adoc  extensions.adoc  graphs.adoc  (+6 more)
(+640 files in other folders)
