[tool.poetry]
name = "guidex"
version = "0.1.0"
description = ""
authors = ["Mario G. <mario.ggar@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
mkdocs-material = "^9.5.48"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
